--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
-    "luxon": "^3.4.4"
+    "luxon": "^3.4.4", 
+    "axios": "^1.6.8"
   }
 }
