--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
-    "luxon": "^3.4.4", 
-    "axios": "^1.6.8"
+    "luxon": "^3.4.4",
+    "axios": "^1.6.8",
+    "moment-timezone": "^0.5.34",
+    "fs-extra": "^10.1.0"
   }
 }
