--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "ms": "^2.1.3", 
     "moment-timezone": "^0.5.34",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0", 
+    "@vitalets/google-translate-api": "^8.0.4"
   }
 }
