--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "node-telegram-bot-api": "^0.61.0",
     "luxon": "^3.4.4",
     "axios": "^1.6.8",
-    "ms": "^2.1.3", 
+    "ms": "^2.1.3",
     "moment-timezone": "^0.5.34",
-    "fs-extra": "^10.1.0", 
-    "@vitalets/google-translate-api": "^8.0.4"
+    "fs-extra": "^10.1.0",
+    "@vitalets/google-translate-api": "^8.0.4",
+    "mathjs": "^14.4.0"
   }
 }
